📱 Fix UI issues on mobile devices 23

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,6 +17,6 @@ body {
 html,
 body,
 #root {
-  height: 100%;
-  overflow: hidden;
+  height: 90%;
+  /* overflow: hidden; */
 }
